# ChangeLog for app-admin/rsyslog
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-admin/rsyslog/ChangeLog,v 1.73 2012/06/15 11:05:25 ultrabug Exp $

*rsyslog-6.2.2 (15 Jun 2012)

  15 Jun 2012; Ultrabug <ultrabug@gentoo.org> -rsyslog-5.8.8.ebuild,
  +rsyslog-6.2.2.ebuild:
  Version bump fix #420999. Drop old.

  02 Jun 2012; Justin Lecher <jlec@gentoo.org> rsyslog-5.8.5.ebuild,
  rsyslog-5.8.8.ebuild, rsyslog-5.8.11.ebuild, rsyslog-6.2.1.ebuild:
  Don't run eautoreconf twice

*rsyslog-6.2.1 (01 Jun 2012)

  01 Jun 2012; Ultrabug <ultrabug@gentoo.org> +files/6-stable/rsyslog.confd,
  +files/6-stable/rsyslog.initd, +files/6-stable/rsyslog.logrotate,
  +files/6-stable/rsyslog-gentoo.conf, +files/6-stable/rsyslog6-zeromq.patch,
  +rsyslog-6.2.1.ebuild:
  New stable v6 branch bump, fix #398269.

  31 May 2012; Ultrabug <ultrabug@gentoo.org> rsyslog-5.8.11.ebuild,
  rsyslog-5.8.5.ebuild, rsyslog-5.8.8.ebuild:
  Fix autotools-utils usage wrt #407811 thanks to vapier and mgorny.

  30 May 2012; Zac Medico <zmedico@gentoo.org> rsyslog-5.8.11.ebuild,
  rsyslog-5.8.5.ebuild, rsyslog-5.8.8.ebuild:
  Inherit eutils for epatch.

*rsyslog-5.8.11 (22 May 2012)

  22 May 2012; Ultrabug <ultrabug@gentoo.org> rsyslog-5.8.5.ebuild,
  -rsyslog-5.8.6.ebuild, -rsyslog-5.8.7.ebuild, rsyslog-5.8.8.ebuild,
  +rsyslog-5.8.11.ebuild:
  Version bump, fix #408745 thx to Opportunist. Fix ssl/gnutls dependencies wrt
  #410241 thx to Conrad. Drop old versions.

  10 May 2012; Jeff Horelick <jdhore@gentoo.org> rsyslog-5.8.8.ebuild:
  dev-util/pkgconfig -> virtual/pkgconfig

*rsyslog-5.8.8 (07 May 2012)

  07 May 2012; Justin Lecher <jlec@gentoo.org> +rsyslog-5.8.8.ebuild:
  Non-maintainer Version Bump, Correct indention of _EOF

  03 May 2012; Jeff Horelick <jdhore@gentoo.org> rsyslog-5.8.5.ebuild,
  rsyslog-5.8.6.ebuild, rsyslog-5.8.7.ebuild:
  dev-util/pkgconfig -> virtual/pkgconfig

*rsyslog-5.8.7 (14 Feb 2012)
