@@ -1,30 +1,32 @@
 -----BEGIN PGP SIGNED MESSAGE-----
 Hash: SHA256
 
-AUX 5-stable/rsyslog-gentoo.conf 3998 RMD160 db8979c4cfe4aa43c6ae5583972a21037dddd161 SHA1 9d4702ac3b505293ad922cc85ef20f0a4a3ae848 SHA256 d31ba477fb94c82cd2362694b680d43bfc5eb83c6e930202feb7531c4396982b
-AUX 5-stable/rsyslog.confd 654 RMD160 ca340f748c84404df86bfdaf9ca9d47d0ff38121 SHA1 e56695ebc21a30f60f1b070f8f26236677ef5d81 SHA256 c476c2180fcceaf581d26d2da6201fbe7a2b9fc89c58456fdb3bdaf18a4cbb56
-AUX 5-stable/rsyslog.initd 963 RMD160 2ab8e434338e4790db280ec05405c5ac4e333bc0 SHA1 95cb0a18517789954e2c0461b231587371f9d7e4 SHA256 cbaf49c80a8fd3ea74dbe82c85b2371aa749b3c431a76d99154616514f92f127
-AUX 5-stable/rsyslog.logrotate 440 RMD160 b2599c94c718af02a641e762960b9796952411bb SHA1 228dba04c683d778bccd86f6bcd80650b9c774b4 SHA256 f0effc19bd1f1bfa367d65d6516c73509cb34545157b9e91cf6e437685dd3fe5
-AUX 6-stable/rsyslog-gentoo.conf 4008 RMD160 c87db14d530e39d44a2d050baed632ae663fe8df SHA1 4d97c144c2186c41ca5d5057742681e3a104c683 SHA256 d42b77980c46deaa3a1e6037682297150d0830b95168dbea3e3d7ad2736ea57e
-AUX 6-stable/rsyslog.confd 654 RMD160 5d020a951a1603a54043b5990a22cf40781f32aa SHA1 41bd53b0fe70e9a4d32ec3c14539bad304b67094 SHA256 dbf4eab207f2b2974a5c9858a98a23ac37b5e8a98c3a837679145ed197226c6f
-AUX 6-stable/rsyslog.initd 962 RMD160 389d7ad9707cab4bc70fb8b870478996ab84b737 SHA1 2e1d625e7e411ac8821910520a46845aaf43ce74 SHA256 39810239217e6475d8e08948e8ece62472b3a443f615ea179bb678526ea39ec4
-AUX 6-stable/rsyslog.logrotate 440 RMD160 47e359d6787fe71ba30ca61e118f75bc677614c2 SHA1 f6f57dfb09f40edabe7e8ad916339774e9f9a93e SHA256 60ad6683550a9bb1600f3f9ad622c5a6897483e4457a4c9f1557e109a7873e72
-AUX 6-stable/rsyslog6-zeromq.patch 3383 RMD160 3ae10477416b539a2fbe881565a71950bde7d962 SHA1 8292bdf874894177cd9902de89ae89404db57129 SHA256 0cdff584364764a2ee494e3263b679b74eee00da6cd1f9a97a4e683eac08291b
+AUX 5-stable/rsyslog-gentoo.conf 3998 SHA256 d31ba477fb94c82cd2362694b680d43bfc5eb83c6e930202feb7531c4396982b SHA512 a27dc6255dceecc41b6fd231604bd0b4baa91ff03faa08e11cebaf2c3c791a9130ff7f5d51150cae8d06d5b270a2f23ce3f50c55f596841bbbd4b2c7cf49051a WHIRLPOOL 5ff9b2495853fb5616a6709296efd906a58f930e55639a384792219120a62fc2c517c417dddca800a13a2532f096a09924d8b486bf16235b5144edb793632df6
+AUX 5-stable/rsyslog.confd 654 SHA256 c476c2180fcceaf581d26d2da6201fbe7a2b9fc89c58456fdb3bdaf18a4cbb56 SHA512 c216674e6867d655c2c09b6205071591ae2b1611ad5dd0346e682733abafa8a1be261fdd9bb985bb5d05d5bfa708a68262b1a94e654a2c18d352fd02d6f950a3 WHIRLPOOL f4069536f61ff7190a357cc7d9bb90af7839e48a34bd4c12a622b295b963aac2f3dda7d9e637ab492ed00e2079541df4ab65516f43d7eb3673a66d579d96f966
+AUX 5-stable/rsyslog.initd 963 SHA256 cbaf49c80a8fd3ea74dbe82c85b2371aa749b3c431a76d99154616514f92f127 SHA512 be6501073eb359e2372b88bda79563a6a74b559f497e5b9369940957238511d259beb2b87c5a2ab0b3145d6d0c618aef7744ed3cafd65bffe816f856eeae3a84 WHIRLPOOL 2248e018f4c1a107ba137506265c07b8e27070075f41d5a14f57c00afe3b6515899712132fb636f3e4368f51ff3111245962305e8c6d5c7423d0e7be3057ba73
+AUX 5-stable/rsyslog.logrotate 440 SHA256 f0effc19bd1f1bfa367d65d6516c73509cb34545157b9e91cf6e437685dd3fe5 SHA512 d54377ddf39197656811a84272568ea761f984e19dd04fc54f372dd04a9244e66d02b26ab33073d0344d054f031660ec611f3c7a18c266e7b68cef5e2c47f06f WHIRLPOOL 4199c9ffb20fce8b84884a80426b1761c622dda7ec6f21c2c0cb5bec4698e4992e9d62af5b7e6cb07059d50196efdc264f2cd814df366fb1e8e79a742e0505ec
+AUX 6-stable/rsyslog-gentoo.conf 4008 SHA256 d42b77980c46deaa3a1e6037682297150d0830b95168dbea3e3d7ad2736ea57e SHA512 392c573dd378cc605be185c1670f6df45833f5412137c45ab26632905e61d009d5a195306dc8d750d8dd28a1fddc15a337ad972eab6efafe590cfea841c35225 WHIRLPOOL b72b7a6a91c8e10ae1f442e3916bc63f450496081245fecc8704c9fd4f2c907f0bc7e432c18ff84f0bbc9bf00813913f2eb27b18676669efc7ed0569184ef307
+AUX 6-stable/rsyslog.confd 654 SHA256 dbf4eab207f2b2974a5c9858a98a23ac37b5e8a98c3a837679145ed197226c6f SHA512 a527a376dac311da1d9e95c2dd1c079f2dc72f529046d0cb140fbea9d048c8d04907f5f517b62a1adf66b0eb73825e64b62c8ddc68caf652d84acc23234da597 WHIRLPOOL 48f3cc2e4372014d48bca9ce2421bb329cac837fa1e26f6bad016f32e2f00532d27ff0a72440e380fb031957e36fccade35c19c18c2cc51a523c1e4c022fe024
+AUX 6-stable/rsyslog.initd 962 SHA256 39810239217e6475d8e08948e8ece62472b3a443f615ea179bb678526ea39ec4 SHA512 424fde5367a90fceb64e2dd64bcf9adf2bdcbbad99b02ecf145debc98ca93381650b1a216f18439a9a069a1ca046e33b33a76f55cb7dd2b655b7558cc58fcdae WHIRLPOOL 26070373564b30f099630d0a57b8c98657beac32097d1b6e8c395190771f216caab72581122cf45aa17709e9a873de87205d218d34670d1773ce067a9c180e76
+AUX 6-stable/rsyslog.logrotate 440 SHA256 60ad6683550a9bb1600f3f9ad622c5a6897483e4457a4c9f1557e109a7873e72 SHA512 1112d7edb8ffd8009747da0840b34466233a22086ebc7fdf26cf9f600dcc3d85bba67bdd844283121a9df3fdcdada09dc8856613e391e3c3f14549d44b38fe00 WHIRLPOOL ee7a0039ae88252a7bb1d97523e28ef0d64cb15d6e962458370665fb721fb9547ee1d937f23aff070da5374e98d3f07f49e6e44c656e6b4d351e65232dfea2b6
+AUX 6-stable/rsyslog6-zeromq.patch 3383 SHA256 0cdff584364764a2ee494e3263b679b74eee00da6cd1f9a97a4e683eac08291b SHA512 96e4b6e686621c101c42d3b4bf9b256e81aa264795e2ee7017f0f82d93cfcefdee6577d269cdb81e1c3e43a241d6cb65ca8471b32c7d71ac86736d67b0ef09cc WHIRLPOOL 4e7d1d223c66a05984fa1a2228e7fca98bce8150b84c33364c20e321850cbe6b15f70fd9174a25cc620db91761ed7b1d4e70e37535ec392ecbcaaf630106cff1
 DIST rsyslog-5.8.11.tar.gz 2393222 RMD160 be13514e02f121ae7b78e0177063ce8cd8a9d859 SHA1 eabba672b9cace696207028da703cf073956d505 SHA256 f75b39cf22506f7a28d986d0a446a09a0806f253dba661f125a241a1b47d6285
+DIST rsyslog-5.8.12.tar.gz 2393679 SHA256 18a408c92fa299773d26a8d6f324eec66282a148b0989c66d94b94318dd0a514 SHA512 18080b09a5e80d3a2dc4b04976c3470eb096560ebc038815dfaec73ef3e53ffbad74b2586d0247aeb318a6e2463e072fe84dad5a2040a9320f37b55511d890ae WHIRLPOOL 80b429beb88014c862fc74f0b9ff0b78bd54764b3c01a4b3f7595d4863eb2f8996d29e9db70b472c30c7cac02793a5290319f51b6eaab4b28dea4ca16246c030
 DIST rsyslog-5.8.5.tar.gz 2364874 RMD160 46b20433e0e5feb807b4777bb8141221fe5dd65b SHA1 a5dc735714b573f577db2892f596dcb0ef35c747 SHA256 a519704c06de1026847f69d99f31a2a32783e9547f5249dddefe805bfbc3ea50
 DIST rsyslog-6.2.1.tar.gz 2432332 RMD160 5039057a792d3f7e709ab2970fa5eb04f79396e9 SHA1 b49296d73f139c58b7ec56b164b8578b78b43b40 SHA256 5b21922f3466acb9511c6f58bbddd8ee269d180a5557dc23892d3b7999f66413
 DIST rsyslog-6.2.2.tar.gz 2432745 RMD160 5a64b5160fdfacbd9dc3fba3df2b9e64a09bf1c2 SHA1 9e16dd6cc72607ce61b5ee2f49d45aa9b8726330 SHA256 c54b51f9f26d16e623d664c765268f3696721ceddfbee4e76b0dd89f04a6f471
-DIST rsyslog-zeromq.tar.gz 22223 RMD160 632a1888d3972da4ce623c8f6973c72b026b035c SHA1 e6f02c25af19022d0cc9d4782f58db3fc27a9f0f SHA256 3cca6ce8722ec5035744a9b88e65b89b35f6b2e6bbdbc9c9bba89d22addd2753
-EBUILD rsyslog-5.8.11.ebuild 7364 RMD160 c3162dd736f5086f4cc1754e8e7a54d553a9a297 SHA1 cbe76f348a0e2b85fc6025f7ebcd2794e125afd6 SHA256 b096ea83f7ec7bbf009acac083d1185ce83f366dd109e383fb8daa70966b2cdc
-EBUILD rsyslog-5.8.5.ebuild 7350 RMD160 7b8364e4f060748622e1db470922917d81905d19 SHA1 ccc1d73fbd471e1d76372dfca0793f4e6e6bff6c SHA256 cf3575e9ffd21171c53acae6b1b76089d1b85ebac37f2cab12c36bc4e96a3d12
-EBUILD rsyslog-6.2.1.ebuild 7552 RMD160 77d877528fa91466bb9f7714fbc04d2f67053c1b SHA1 f691b99cc6c91afb21a7b1a083fe5ab79b38b607 SHA256 837c07dd4a5fa3df259cc705a83bd9872271c0e02f9e90588c177c9489f56cc6
-EBUILD rsyslog-6.2.2.ebuild 7441 RMD160 88a5a768c24431a20835ede19902925c44785bec SHA1 ddfd230819d372ddc362af1b2c21e0b73b7c720b SHA256 fccb1106b69bd98198e2114da524878445853ad7b9e003747202566076b2306a
-MISC ChangeLog 14157 RMD160 58b16ba98a5b5e31ee3c91a0ecf01eb8da26dcd2 SHA1 100f32559440818465628aae42109cc0919f0259 SHA256 88f271548c81a21dec0270e816ca669bc9bc663d3b74a35675acc4b7b39870c1
-MISC metadata.xml 769 RMD160 76e1953b0841e1020088079af549451ea6d16723 SHA1 8f9ed914369c0229f6d4aaec7340d9dcf6fb5030 SHA256 70468ddaa9ff15f4cb3059fcf8834ca7f2e8f55a6f3ac57e1487202e5f3f1730
+DIST rsyslog-zeromq.tar.gz 22223 SHA256 3cca6ce8722ec5035744a9b88e65b89b35f6b2e6bbdbc9c9bba89d22addd2753 SHA512 d0fd6705d1fbbfd8c2932df281ef30ebfcc83085a62026ffd192bdfefaca5abef415183f958eee4f7421804ca59d8c20d8cf7fbc5b4105f86c297c6fbbcdd760 WHIRLPOOL 17d189dfe12ef5525f103d6ee202cfafe019bca11856da9d206004a9377b682b09d76816e2e2d1ca5aff2394b8cc8baec13f4961d32c74a377a9b6041ff398b1
+EBUILD rsyslog-5.8.11.ebuild 7364 SHA256 b096ea83f7ec7bbf009acac083d1185ce83f366dd109e383fb8daa70966b2cdc SHA512 5090a2b2942e5b219db208840992a19ca6b1ffe3e13bbe1e45c889641c1bd4303e79c0e97180a9e9016e7d86a50c34480718d459f06ea3d79bbbac40661e09d9 WHIRLPOOL 57a60f67416034a75f125dca62b040bad3f0d4cf4898bef981d29c26fc89affa8c0bcff5b2015b910e98faca17f22bd92bf0da07441112fc11bd402bdc702ad5
+EBUILD rsyslog-5.8.12.ebuild 7368 SHA256 c6c7c957aead79ddf475e79196b6c0d0202c73ac27822bac039eb2d6e61e280e SHA512 c43171c0a6a3609ad11bf68e6bace1a4c3a8671a803ae630e446e02c81479e68c570ff10565e23e76773d9782c360bd12d4cc3de6cfe81e6ca3ad2a7c476c311 WHIRLPOOL ad052e925486504840435907700ded9c2c90feb4caefc7b5562e908d1948208d135fc8a350347f9ae81b479c3f45a954662eb4bbaadabc1a790922d6fdf37a88
+EBUILD rsyslog-5.8.5.ebuild 7350 SHA256 cf3575e9ffd21171c53acae6b1b76089d1b85ebac37f2cab12c36bc4e96a3d12 SHA512 04b3a628346623614dc001f6f72f7da0c3a617ff1ec08733d22bbac85204afb44eb96a34077fdba3e929520014ae2e05cf53f5c35fc5afe2e4b5fe143e40cdc3 WHIRLPOOL cc66a3e5f3eb4a68c05746d972e7ef0840c934bb82e7031bc920a711a47a68cefedd071521755fd9252c674765ed82514e30ca31445ff2050562b81072467412
+EBUILD rsyslog-6.2.1.ebuild 7552 SHA256 837c07dd4a5fa3df259cc705a83bd9872271c0e02f9e90588c177c9489f56cc6 SHA512 fd7162e4f1705a4cd37429f15fe0cd468b8c92ed940bd77eff6d88e1bb4e4b524dd0a14406bd88d5a5bc56bab9a373a3239a6f6f2f24f18969484e74a3d4736e WHIRLPOOL 86ecdfebfa52bfe222247cf51d524ad06b6eabffb05edd81f6b106a42e5b0e234ddff63b27facc3869886c35a70caa4e2bea3fc9c0a90e22a141b59aff56cec5
+EBUILD rsyslog-6.2.2.ebuild 7441 SHA256 fccb1106b69bd98198e2114da524878445853ad7b9e003747202566076b2306a SHA512 479563cea5be4a74f1677971f83d55836a5a32c99dff457ddb933ae645a86b66c62abdb0b6f841f618da2e08b5b3238e04343d1c6e1ce60c9db2e41b2e285fea WHIRLPOOL 7d23339b420c84c135b885040e626bd58e9c2342f2bd81453e848b3f644d9af6aea2e5bebef2bf6f5fa29244ca42aa85b0299a502197edf4a821050983da1b6b
+MISC ChangeLog 14284 SHA256 3290eb51a91b685f6096ff31be05c0bcde8f00244af3fb8bfaab8658b5ffeed7 SHA512 070c12002b85695e1944c44fa0eb8786ff5b5099f185824c3b7f0bfcec68e8a1344d8e637dc4c096fd46de789b7d630cdd753a4c805e646f4e439a05cbb217bd WHIRLPOOL 1cb43b8fe649b0debe04c69235c2ab58c5682ff2d3dcbb1b82a6434d361d9feced0a281d49d669e4d2eb579d086e9e016565f90821f483ff12a3a0c84d367f9e
+MISC metadata.xml 769 SHA256 70468ddaa9ff15f4cb3059fcf8834ca7f2e8f55a6f3ac57e1487202e5f3f1730 SHA512 42969433dd0854e0641497b8982bd1a24b7333e6c896ca41a1e5519d132da7bcc445c8ff8f0150679e18592a4e558a49f568cd1d3998884a7548c510ca24516a WHIRLPOOL ffaca5de9effcb374fd0ab3df59f2fc9491f30344bee8fbf59145fb1825f1f1b29c0aa3b2683108ecd247055dbf52394ed9f69dab1992eb4d1a1e2d91e2a5e86
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.19 (GNU/Linux)
 
-iF4EAREIAAYFAk/bFv8ACgkQKiQSS7ZY+hPFWQEA7Pb1Y/T6aDnrU0CRh3bx1R76
-QPXW1GfyrTqPOMFXaJMA/Rwfbu0D4y0VfXUDa7ROOI1FeklZXdeYriuQoTwJ5DXV
-=FTXZ
+iF4EAREIAAYFAk/0T34ACgkQKiQSS7ZY+hOVsgD/WmcNj9CZQL4dcQ2gBo/wXV4A
+PBvcc25osJU5w+9/itMA/3kkP/9UhWQnyl6ocmr5nmN/sTfMsI8u26Nlc7ixvlfa
+=4Ij5
 -----END PGP SIGNATURE-----
