@@ -1,6 +1,11 @@
 # ChangeLog for app-admin/rsyslog
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-admin/rsyslog/ChangeLog,v 1.73 2012/06/15 11:05:25 ultrabug Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-admin/rsyslog/ChangeLog,v 1.74 2012/07/04 14:13:09 ultrabug Exp $
+
+*rsyslog-5.8.12 (04 Jul 2012)
+
+  04 Jul 2012; Ultrabug <ultrabug@gentoo.org> +rsyslog-5.8.12.ebuild:
+  v5 branch version bump
 
 *rsyslog-6.2.2 (15 Jun 2012)
 
